Minor fix for English display "Melihat" -> "View"

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -9,7 +9,7 @@
     "common.save": "Save",
     "common.columns.title.op": "Operating",
     "common.columns.title.modify": "Modify",
-    "common.columns.title.view": "Melihat",
+    "common.columns.title.view": "View",
     "common.columns.title.delete": "Delete",
     "common.columns.title.delete.notice": "Are you sure to delete?",
     "common.add.record": "Add Record",
@@ -146,7 +146,7 @@
     "electron.menu.edit.copy": "Copy",
     "electron.menu.edit.paste": "Paste",
     "electron.menu.edit.select.all": "Select All",
-    "electron.menu.view": "Melihat",
+    "electron.menu.view": "View",
     "electron.menu.view.reload": "Reload",
     "electron.menu.view.toggle.full.screen": "Toggle full screen",
     "electron.menu.view.switch.dev.tools": "Switch developer tools",
