--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -159,5 +159,14 @@
     "electron.menu.help.submit.issues.gitee": "подати питання (gitee)",
     "electron.menu.help.officail.website": "Веб-сайт Officail",
     "electron.menu.help.about": "Про QuickRedis",
-    "electron.menu.end": "#### electron.menu.end ####"
+    "electron.menu.end": "#### electron.menu.end ####",
+
+    "proxy.use":"使用代理",
+    "proxy.host":"代理Host",
+    "proxy.sshport":"SSH端口",
+    "proxy.username":"SSH用户名",
+    "proxy.password":"代理密码",
+    "proxy.sshkeypath":"代理私钥路径",
+    "proxy.connecterror":"代理连接失败",
+    "proxy.privateKey.not.exist":"秘钥文件错误"
 }
