--- a/public/locales/zh-CN.json
+++ b/public/locales/zh-CN.json
@@ -41,6 +41,7 @@
 
     "SystemConfig.start": "#### SystemConfig ####",
     "SystemConfig.lang": "选择语言",
+    "SystemConfig.tree.split": "设置目录分隔符",
     "SystemConfig.title": "系统配置",
     "SystemConfig.needRestart": "您需要重新启动才能生效。",
     "SystemConfig.end00": "#### SystemConfig ####",
