--- a/public/locales/pt.json
+++ b/public/locales/pt.json
@@ -41,9 +41,14 @@
 
     "SystemConfig.start": "#### SystemConfig ####",
     "SystemConfig.lang": "Selecione o idioma",
+    "SystemConfig.tree.split": "Definir separador",
     "SystemConfig.title": "Configuração do sistema",
     "SystemConfig.needRestart": "Você precisa reiniciar para fazer efeito.",
     "SystemConfig.end00": "#### SystemConfig ####",
+
+    "HostKeyTree.start": "#### HostKey ####",
+    "HostKeyTree.delete.key.node": "excluir",
+    "HostKeyTree.end00": "#### HostKey ####",
 
     "HostKey.start": "#### HostKey ####",
     "HostKey.key.exist": "A chave já existe",
@@ -161,12 +166,12 @@
     "electron.menu.help.about": "Sobre QuickRedis",
     "electron.menu.end": "#### electron.menu.end ####",
 
-    "proxy.use":"Usando um proxy",
-    "proxy.host":"Agente anfitrião.",
-    "proxy.sshport":"Porta SSH",
-    "proxy.username":"Nome do utilizador SSH",
-    "proxy.password":"Senha Proxy",
-    "proxy.sshkeypath":"Localização provável Da chave Privada",
-    "proxy.connecterror":"A conexão do'proxy'falhou",
-    "proxy.privateKey.not.exist":"Erro de arquivo de chave secreta"
+    "proxy.use": "Usando um proxy",
+    "proxy.host": "Agente anfitrião.",
+    "proxy.sshport": "Porta SSH",
+    "proxy.username": "Nome do utilizador SSH",
+    "proxy.password": "Senha Proxy",
+    "proxy.sshkeypath": "Localização provável Da chave Privada",
+    "proxy.connecterror": "A conexão do'proxy'falhou",
+    "proxy.privateKey.not.exist": "Erro de arquivo de chave secreta"
 }
