--- a/public/locales/pt.json
+++ b/public/locales/pt.json
@@ -173,5 +173,10 @@
     "proxy.password": "Senha Proxy",
     "proxy.sshkeypath": "Localização provável Da chave Privada",
     "proxy.connecterror": "A conexão do'proxy'falhou",
-    "proxy.privateKey.not.exist": "Erro de arquivo de chave secreta"
+    "proxy.privateKey.not.exist": "Erro de arquivo de chave secreta",
+
+    "notification.start": "#### notification ####",
+    "notification.support.host.key.tree.title": "Novo diretório de uso de recursos para exibir e manipular chaves",
+    "notification.support.host.key.tree.description": "Como habilitar este recurso: Menu Principal -> Arquivo -> Configurações do Sistema -> Definir Delimitador",
+    "notification.end00": "#### notification ####"
 }
