--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -173,5 +173,10 @@
     "proxy.password": "Passwort des Proxy",
     "proxy.sshkeypath": "Pfad des privaten Schlüssels Proxy",
     "proxy.connecterror": "Verbindungsaufbau fehlgeschlagen",
-    "proxy.privateKey.not.exist": "Fehler bei der geheimen Schlüsseldatei"
+    "proxy.privateKey.not.exist": "Fehler bei der geheimen Schlüsseldatei",
+
+    "Benachrichtigung.Start": "#### Benachrichtigung ####",
+    "notification.support.host.key.tree.title": "Neues Feature-Use-Verzeichnis zum Anzeigen und Bearbeiten von Schlüsseln",
+    "notification.support.host.key.tree.description": "So aktivieren Sie diese Funktion: Hauptmenü -> Datei -> Systemeinstellungen -> Trennzeichen festlegen",
+    "Benachrichtigung.end00": "#### Benachrichtigung ####"
 }
