--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -173,5 +173,10 @@
     "proxy.password": "Пароль прокси",
     "proxy.sshkeypath": "Путь к закрытому ключу прокси",
     "proxy.connecterror": "Ошибка подключения прокси",
-    "proxy.privateKey.not.exist": "Ошибка файла секретного ключа"
+    "proxy.privateKey.not.exist": "Ошибка файла секретного ключа",
+
+    "notification.start": "#### notification ####",
+    "notification.support.host.key.tree.title": "Новый каталог использования функций для отображения и управления ключами",
+    "notification.support.host.key.tree.description": "Как включить эту функцию: Главное меню -> Файл -> Системные настройки -> Установить разделитель",
+    "notification.end00": "#### notification ####"
 }
