--- a/public/locales/zh-TW.json
+++ b/public/locales/zh-TW.json
@@ -173,5 +173,10 @@
     "proxy.password": "代理密碼",
     "proxy.sshkeypath": "代理私鑰路徑",
     "proxy.connecterror": "代理連接失敗",
-    "proxy.privateKey.not.exist": "秘鑰文件錯誤"
+    "proxy.privateKey.not.exist": "秘鑰文件錯誤",
+
+    "notification.start": "#### notification ####",
+    "notification.support.host.key.tree.title": "新增功能 - 使用目錄顯示和操作keys",
+    "notification.support.host.key.tree.description": "啟用該功能的方法：主菜單 -> 文件 -> 系統設置 -> 設置分隔符",
+    "notification.end00": "#### notification ####"
 }
