点击 tab 支持命令提示

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -99,7 +99,7 @@
     "CheckUpdateService.end00": "#### CheckUpdateService ####",
 
     "HostTerminal.start": "#### HostTerminal ####",
-    "HostTerminal.descriptions.msg": "Type help to view the help info. Redis command document: http://www.redis.cn/commands.html?from=QuickRedis",
+    "HostTerminal.descriptions.msg": "Click the tab key to display the command usage method. Redis command reference document: https://redis.io/commands?from=QuickRedis",
     "HostTerminal.end00": "#### HostTerminal ####",
 
     "ResourceTree.start": "#### ResourceTree ####",
