--- a/public/locales/zh-CN.json
+++ b/public/locales/zh-CN.json
@@ -99,7 +99,7 @@
     "CheckUpdateService.end00": "#### CheckUpdateService ####",
 
     "HostTerminal.start": "#### HostTerminal ####",
-    "HostTerminal.descriptions.msg": "输入 help 以查看帮助信息。Redis命令文档:http://www.redis.cn/commands.html?from=QuickRedis",
+    "HostTerminal.descriptions.msg": "点击 tab 键会出现命令使用方法。Redis命令参考文档: https://redis.io/commands?from=QuickRedis",
     "HostTerminal.end00": "#### HostTerminal ####",
 
     "ResourceTree.start": "#### ResourceTree ####",
