--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -99,7 +99,7 @@
     "CheckUpdateService.end00": "#### CheckUpdateService ####",
 
     "HostTerminal.start": "#### HostTerminal ####",
-    "HostTerminal.descriptions.msg": "Nhập help để xem thông tin trợ giúp. Tài liệu lệnh của Redis: http://www.redis.cn/commands.html?from=QuickRedis",
+    "HostTerminal.descriptions.msg": "Nhấp vào phím tab để hiển thị phương pháp sử dụng lệnh. Tài liệu tham khảo lệnh Redis: https://redis.io/commands?from=QuickRedis",
     "HostTerminal.end00": "#### HostTerminal ####",
 
     "ResourceTree.start": "#### ResourceTree ####",
